---------------------------------------------------------------------------------------------------
Version: 2.10.2
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 2.10.1
Date: 2025-11-18
  Bugfixes:
    - Editing blueprint filters with entities no longer present in active mods no longer crashes the UI.
---------------------------------------------------------------------------------------------------
Version: 2.10.0
Date: 2025-11-17
  Features:
    - You can now copy an entity with item requests, in a project. This can be toggled under a new setting.
---------------------------------------------------------------------------------------------------
Version: 2.9.1
Date: 2025-11-16
  Features:
    - Staged copy and Staged cut now also copy custom item requests!
---------------------------------------------------------------------------------------------------
Version: 2.9.0
Date: 2025-11-16
  Features:
    - Added "discarding" a stage, which deletes a stage without merging it's contents.
    - Reverse-selecting with the Staged deconstruct stage, now deconstructs the entity in the NEXT stage. The "Deconstruct at next stage" setting now swaps normal and reverse select behavior.
  Changes:
    - The "stage deconstructed" indicator now also shown for entities created and removed in the same stage; it is only omitted on trains and vehicles.
  Gui:
    - Make project list ui slightly slimmer.
    - Make project settings ui slightly slimmer.
---------------------------------------------------------------------------------------------------
Version: 2.8.4
Date: 2025-11-12
  Gui:
    - Don't close project list when entering a project.
  Minor features:
    - Hidden project surface names from remote view surface list.
  Bugfixes:
    - Fixed returning to a project/stage at the same position you left it, in more cases.
    - Fixed that planet selection in UIs would be off by 1 in some cases.